--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/475497.png" />
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Calculadora de Teoría de Colas</title>
+    <title>Calculadora de Teoría de Colas || Richard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
