--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/475497.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="La teoría de colas es el estudio matemático de las colas o líneas de espera dentro de un sistema. Esta teoría estudia factores como el tiempo de espera medio en las colas o la capacidad de trabajo del sistema sin que llegue a colapsar."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/475497.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
